force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/Apttus_Echosign__Apttus_RSPCAttachments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Echosign__Apttus_RSPCAttachments__c</fullName>
    <description>Stores the modified name of the attachments sent with the Agreement, in order to relate them to their actual parents.</description>
    <inlineHelpText>Stores the modified name of the attachments sent with the Agreement, in order to relate them to their actual parents.</inlineHelpText>
    <label>Apttus_RSPCAttachments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>