force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__External_Signers_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__External_Signers_Verification_Method__c</fullName>
    <label>External Signers Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Password to sign agreement</fullName>
            </value>
            <value>
                <fullName>Knowledge based authentication</fullName>
            </value>
            <value>
                <fullName>Web identity authentication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>