force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/Parts_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To enable agreements for Parts Order Line Object.</description>
    <label>Parts Order Line</label>
    <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>