force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/listViews/echosign_dev1__All.listView-meta.xml
<ListView>
    <fullName>echosign_dev1__All</fullName>
    <columns>NAME</columns>
    <columns>echosign_dev1__StatusVisible__c</columns>
    <columns>echosign_dev1__SignedPDF__c</columns>
    <columns>echosign_dev1__Document_Key__c</columns>
    <columns>echosign_dev1__More_Recipients__c</columns>
    <columns>echosign_dev1__Sender_Recorded__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>No</value>
    </filters>
    <label>All</label>
</ListView>